# kodo

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  kodo.example.toml  openai-oauth-resp.sample.txt
.github/workflows/: ci.yml
crates/kodo-auth/: Cargo.toml
crates/kodo-auth/src/: lib.rs  oauth.rs  storage.rs
crates/kodo-config/: Cargo.toml
crates/kodo-config/src/: config.rs  lib.rs  loader.rs  watcher.rs
crates/kodo-core/: Cargo.toml
crates/kodo-core/src/: agent.rs  checkpoint.rs  context.rs  lib.rs  message.rs  mode.rs  safety.rs  subagent.rs
crates/kodo-fmt/: Cargo.toml
crates/kodo-fmt/src/: lib.rs  registry.rs  runner.rs
crates/kodo-llm/: Cargo.toml
crates/kodo-llm/src/: anthropic.rs  gemini.rs  lib.rs  models.rs  ollama.rs  openai.rs  provider.rs  types.rs
crates/kodo-lsp/: Cargo.toml
crates/kodo-lsp/src/: config.rs  diagnostics.rs  lib.rs  manager.rs  transport.rs
crates/kodo-store/: Cargo.toml
crates/kodo-store/migrations/: 001_initial.sql
crates/kodo-store/src/: auth.rs  crypto.rs  db.rs  lib.rs  memory.rs  oauth.rs  session.rs
crates/kodo-tools/: Cargo.toml
crates/kodo-tools/src/: file_edit.rs  file_read.rs  file_write.rs  glob_search.rs  grep_search.rs  lib.rs  registry.rs  rg_search.rs  shell.rs  tool.rs  web_fetch.rs
crates/kodo-tui/: Cargo.toml
crates/kodo-tui/src/: app.rs  event.rs  lib.rs  model.rs  terminal.rs  update.rs  view.rs
crates/kodo-ui/: Cargo.toml
crates/kodo-ui/src/: command.rs  event.rs  keybinds.rs  lib.rs  message.rs  model.rs  skills.rs  slash.rs  syntax.rs  theme.rs  update.rs
crates/kodo-ui/src/tui/: mod.rs  terminal.rs  view.rs
crates/kodo-ui/tests/: skills_integration.rs
docs/: STRATEGY.md  STRATEGY.org
docs/plans/: 00-mvp.org  000-mvp.org  001-elm-architecture.org  002-context-window-management.org  003-oauth-login-flows.org  004-prompt-caching.org  005-subagent-support.org  006-mcp-server-integration.org  007-config-file-support.org  008-custom-lsp-formatters.org  009-auto-install-lsp-servers.org  009-slash-commands.org  01-elm-architecture.org
src/: main.rs
