[package]
name = "kodo-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
webbrowser = "1"
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
url = "2"
urlencoding = "2"
tracing = "0.1"

# OS-specific keychain access
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = "3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincred"] }