[package]
name = "kodo-core"
version.workspace = true
edition.workspace = true

[dependencies]
kodo-llm = { workspace = true }
kodo-tools = { workspace = true }
kodo-fmt = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
uuid = { workspace = true }
chrono = { workspace = true }
pin-project-lite = { workspace = true }
