[package]
name = "kodo-store"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
keyring = { workspace = true }
base64 = "0.22.1"
rand = "0.8.5"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3"
