[package]
name = "kodo-store"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
keyring = { workspace = true }
base64 = "0.22.1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
open = "5"
rand = "0.8.5"
reqwest = { workspace = true }
sha2 = "0.10.9"
url = "2.5.8"

[dev-dependencies]
tempfile = "3"
