[package]
name = "kodo-ui"
version.workspace = true
edition.workspace = true

[dependencies]
kodo-core = { workspace = true }
kodo-llm = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
syntect = { workspace = true }
dirs = "6"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
